# poly-bot

./: .env.example  .gitignore  Cargo.toml  DEBUGGING_NO_TRADES.md  Dockerfile  MIGRATION-PHASE2.md  MIGRATION-PHASE3.md  MIGRATION.md  NextStep.md  PLAN.md  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.local.json
executing/: first-plan.txt  status.txt
focused-research-done/: research-plan.md
focused-research-done/research-1/: fees.txt  socket-live-data.json  socket-market-data.json  user-socket-messages.json  ws-capture.js  ws-live-capture-1767735803002.json
focused-research-done/research-2/: research.txt
focused-research-done/research-3/: research.txt
focused-research-done/research-4/: research.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ActiveTrades.tsx  Controls.tsx  FillHistory.tsx  Markets.tsx  Portfolio.tsx  StatusBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: api.ts
new-strategies/: tweets.txt
planning/: 01-STRATEGY-ANALYSIS.md  02-RUST-ARCHITECTURE.md  03-API-REFERENCE.md  04-IMPLEMENTATION-PLAN.md  05-API-DISCOVERY-FINDINGS.md
raw-docs/: openai-feedback.txt  pivot-openai-feedback.txt  polymarket_bot_blueprint.txt  raw-research-data.txt  raw-tweets.txt
research/archived/: 00-PIVOT-ARCHITECTURE-REVIEW.md
src/: bot.rs  config.rs  constants.rs  error.rs  kill_switch.rs  lib.rs  main.rs
src/alerts/: mod.rs
src/api/: auth.rs  client.rs  controls.rs  discovery.rs  endpoints.rs  gamma.rs  mod.rs  server.rs  types.rs
src/claim/: mod.rs
src/execution/: cancellation.rs  executor.rs  mod.rs  order_tracker.rs  policy.rs  state_machine.rs
src/feeds/: binance.rs  mod.rs
src/latency/: mod.rs
src/ledger/: cash.rs  mod.rs  orders.rs  positions.rs
src/metrics/: mod.rs
src/orchestrator/: approvals.rs  auth.rs  execution.rs  handlers.rs  heartbeat.rs  mod.rs  setup.rs  shutdown.rs
src/risk/: circuit_breaker.rs  limits.rs  mod.rs  rate_limiter.rs  reconciliation.rs
src/signing/: mod.rs  order.rs
src/state/: mod.rs  order_book.rs
src/strategy/: arbitrage.rs  contrarian.rs  edge_calculator.rs  late_entry.rs  maker_rebate_arb.rs  market_pair.rs  mod.rs  router.rs  tbo_trend.rs  tbt_divergence.rs  temporal_arb.rs  traits.rs
src/sync/: mod.rs
src/websocket/: discovery.rs  gamma.rs  market.rs  mod.rs  types.rs  user.rs
