[package]
name = "polymarket_bot"
version = "0.1.0"
edition = "2021"
description = "High-frequency Polymarket trading bot"
authors = [""]

[dependencies]
# Polymarket official SDK
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "data", "tracing"] }

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "fs", "signal"] }

# Streams (SDK WS returns impl Stream)
futures-util = "0.3"

# HTTP client (optimized)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# TLS — install aws-lc-rs as the process-level crypto provider for rustls
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Signing type alias — SDK re-exports LocalSigner + Signer trait but its sign()
# method requires Sized, so we need the concrete PrivateKeySigner type alias.
# Using the small alloy-signer-local crate (already compiled as SDK transitive dep)
# instead of the full alloy metapackage.
alloy-signer-local = "1"

# Concurrent data structures
dashmap = "5.5"

# Fixed-point arithmetic (no f64 for prices)
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for order tracking
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
dotenvy = "0.15"


[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
