[package]
name = "polymarket_bot"
version = "0.1.0"
edition = "2021"
description = "High-frequency Polymarket trading bot"
authors = [""]

[dependencies]
# Polymarket official SDK
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "data", "tracing", "ctf"] }

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "fs", "signal"] }

# Streams (SDK WS returns impl Stream)
futures-util = "0.3"

# HTTP client (optimized)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# TLS — install aws-lc-rs as the process-level crypto provider for rustls
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Signing type alias — SDK re-exports LocalSigner + Signer trait but its sign()
# method requires Sized, so we need the concrete PrivateKeySigner type alias.
# Using the small alloy-signer-local crate (already compiled as SDK transitive dep)
# instead of the full alloy metapackage.
alloy-signer-local = "1"
# Full alloy provider stack for on-chain approval transactions.
# Already compiled as a transitive SDK dep so this adds no build overhead.
alloy = { version = "1", features = ["providers", "contract", "reqwest", "reqwest-rustls-tls"] }

# Concurrent data structures
dashmap = "5.5"

# Fixed-point arithmetic (no f64 for prices)
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for order tracking
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
dotenvy = "0.15"

# Frontend API server (HTTP + WebSocket)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Latency histograms — p50/p95/p99 for critical path instrumentation
hdrhistogram = "7"

# Binance WebSocket feed (temporal arb external price source)
# v0.28 is already compiled by the SDK as a transitive dep (with rustls TLS)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

# Prometheus metrics — exposes /metrics in text format for scraping
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }


[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
